--- a/www/scss/style.scss
+++ b/www/scss/style.scss
@@ -1,11 +1,11 @@
 @import "../scss/header";
-@import "../scss/normalize";
 @import "../scss/story";
 @import "../scss/video";
 @import "../scss/expertise";
 @import "../scss/team";
-@import "../scss/work";
-@import "../scss/coworkwrs";
+@import "../scss/portfolio";
+@import "../scss/testimonials";
 @import "../scss/form";
 @import "../scss/footer";
 @import "../scss/global";
+@import "../scss/normalize";
